2007-07-12  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Plugins, Tomboy/Plugins/Makefile.am,
	  Tomboy/Plugins/checkbox-done.png, Tomboy/Plugins/checkbox-todo.png,
	  Tomboy/Plugins/.cvsignore: Removing Tomboy/Plugins/.

2007-07-12  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in: Bump version to 0.7.3.

2007-07-12  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Updated NEWS for 0.7.2.

2007-07-12  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Addins/GalagoPresence/GalagoPresence.addin.xml,
	  Tomboy/Addins/Evolution/Evolution.addin.xml,
	  Tomboy/Addins/PrintNotes/PrintNotes.addin.xml,
	  Tomboy/Addins/Bugzilla/Bugzilla.addin.xml: Changing category to
	  "Desktop Integration".  Categories could still use some love.

2007-07-12  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Preferences.cs, data/tomboy.schemas.in: Removing use of
	  enabled_plugins GConf key.

2007-07-11  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy.mdp: Reverting this because it was accidentally checked-in
	  with references.

2007-07-11  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/PreferencesDialog.cs: Added a missing semi-colon in a string.
	* po/POTFILES.in: Commented out many of the Mono.Addins code since we
	  don't really use them directly in Tomboy.  Also added the
	  *.addin.xml files.  I don't any strings are being extracted at this
	  point, but hopefully eventually.

2007-07-11  Boyd Timothy <btimothy@gmail.com> 

	Fixes for make distcheck:
	
	* Tomboy/Addins/ExportToHtml/Makefile.am: Include ExportToHtml.xsl in
	  EXTRA_DIST.
	* po/POTFILES.in: Added EvolutionNoteAddin.cs,
	  GalagoPresenceNoteAddin.cs, and removed PluginManager.cs.

2007-07-11  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* configure.in, Tomboy.mdp,
	  Tomboy/Addins/GalagoPresence/GalagoPresenceNoteAddin.cs,
	  Tomboy/Addins/GalagoPresence/Makefile.am,
	  Tomboy/Addins/GalagoPresence/GalagoPresence.addin.xml,