@@ -3,6 +3,8 @@
 	name="SSH Sync Service Add-in"
 	author="Tomboy Project"
 	description="Synchronize Tomboy Notes to a SSH share"
+	category="Synchronization"
+	defaultEnabled="true"
 	version="0.1">
 
 	<Runtime>
